--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,7 +16,7 @@
 * {
   margin: 0px;
   padding: 0px;
-  font-family: 'Oswald', sans-serif;
+  font-family: 'Oswald',"M PLUS Rounded 1c", sans-serif;
 }
 
 .top {
@@ -25,7 +25,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 400px;
+  height: 50vh;
   text-align: center;
 }
 
@@ -37,16 +37,10 @@
   margin-left: 0.2em;
 }
 
-.top p {
-  margin-top: 0;
-  font-size: 25px;
-  letter-spacing: 0.2em;
-  margin-left: 0.2em;
-}
-
 .main {
+  background-color: #fffafa;
   text-align: center;
-  margin-top: 30px;
+  height: 50vh;
 }
 
 .main h2 {
@@ -65,6 +59,25 @@
   color: #ff7d6e;
   background: #ffebe9;
   letter-spacing: 0.1em;
+}
+
+.form {
+  margin:0 auto;
+}
+
+.textbox {
+  background-color: whitesmoke;
+  color: black;
+  outline: none;
+  border: 1px solid #aaa;
+  -webkit-transition: all .3s;
+  transition: all .3s;
+  width: 25vw;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  border-radius: 3px;
+  letter-spacing: 0.1em;
+  font-weight: bold;
 }
 
 input {
@@ -86,22 +99,8 @@ input:hover {
 	 text-decoration: none;
 }
 
-textarea {
-  background-color: whitesmoke;
-  color: black;
-  outline: none;
-  border: 1px solid #aaa;
-  -webkit-transition: all .3s;
-  transition: all .3s;
-  width: 25vw;
-  margin-top: 20px;
-  border-radius: 3px;
-  letter-spacing: 0.1em;
-  font-weight: bold;
-}
-
 input:focus,
-textarea:focus {
+.textbox:focus {
   box-shadow: 0 0 7px #1abc9c;
   border: 1px solid #1abc9c;
 }
