--- a/app/views/reviews/top.html.erb
+++ b/app/views/reviews/top.html.erb
@@ -1,7 +1,6 @@
 <section class="top">
   <div class="container">
     <h1>ARCS-@cosme</h1>
-    <p>@cosmeの商品レビューを自動収集します</p>
   </div>
 </section>
 <section class="main">
@@ -13,14 +12,20 @@
       <% end %>
     </div>
     <div class="form">
-      <%= form_tag("/reviews/scrape") do %>
-        <textarea placeholder=" Item Name Here" name="name"></textarea>
-        <br>
-        <textarea placeholder=" URL Here" name="page_url"></textarea>
-        <br>
-        <textarea placeholder=" How many reviews?" name="rev_count"></textarea>
-        <br>
-        <input value="START" type="submit"/>
+      <%= form_with url:"/reviews/scrape" do |f| %>
+        <dl>
+          <dt>商品名</dt>
+          <dd><%= f.text_field :name , class:"textbox" %></dd>
+        </dl>
+        <dl>
+          <dt>商品ページURL</dt>
+          <dd><%= f.text_field :page_url , class:"textbox" %></dd>
+        </dl>
+        <dl>
+          <dt>取得レビュー数</dt>
+          <dd><%= f.text_field :rev_count , class:"textbox" %></dd>
+        </dl>
+      <%= f.submit "START"%>
       <% end %>
     </div>
   </div>
