--- a/app/views/reviews/top.html.erb
+++ b/app/views/reviews/top.html.erb
@@ -11,6 +11,7 @@
         <%= flash.notice %>
       <% end %>
     </div>
+    <div class="loader hidden">Loading...</div>
     <div class="form">
       <%= form_with url:"/reviews/scrape" do |f| %>
         <dl>
@@ -25,7 +26,7 @@
           <dt>取得レビュー数</dt>
           <dd><%= f.text_field :rev_count , class:"textbox" %></dd>
         </dl>
-      <%= f.submit "START"%>
+      <%= f.submit "START", class:"remote: true", id:"btn"%>
       <% end %>
     </div>
   </div>
