--- a/app/views/reviews/top.html.erb
+++ b/app/views/reviews/top.html.erb
@@ -1,6 +1,6 @@
 <section class="top">
   <div class="container">
-    <h1>ARCS-@cosme</h1>
+    <%= image_tag 'ARCS_normal_cosme.png', class:"logo" %>
   </div>
 </section>
 <section class="main">
