--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -33,12 +33,8 @@
   text-align: center;
 }
 
-.top h1 {
-  margin-top: 0;
-  margin-bottom: 10px;
-  font-size: 6rem;
-  letter-spacing: 0.5rem;
-  margin-left: 0.5rem;
+.logo {
+  width: 50%;
 }
 
 .main {
