--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -84,7 +84,7 @@ dt {
   font-weight: bold;
 }
 
-input {
+input, .btn {
   margin:0 auto;
 	display: block;
 	position: relative;
@@ -96,10 +96,14 @@ input {
   color: #fff;
   background: #2eb6aa;
   letter-spacing: 0.2em;
-  font-size: 1rem;
+  font-size: 1.2rem;
 }
 
-input:hover {
+.btn {
+  background-color: tomato;
+}
+
+input:hover, .btn:hover {
 	 opacity:0.8;
 	 cursor: pointer;
 	 text-decoration: none;
